Correct alignment of lower content box

--- a/team/team.css
+++ b/team/team.css
@@ -17,65 +17,73 @@ body {
 }
 
 .profileOne {
-    width: 15vw;
-    height: 15vw;
+    width: 10vw;
+    height: 10vw;
     background-color: #272624;
-    margin-bottom: 6vw;
     background-image: url('demo.jpeg'); 
     background-size: cover; 
-    /* background-position: center;  */
+    align-items: flex-end;
+    position: relative;
 }
 
 .textOne {
-    width: 10vw;
+    width: 5vw;
     height: 35vw;
     background-color: #272624;
+    position: absolute;
+    top: 30vw;
 }
 
 .profileTwo {
-    width: 20vw;
-    height: 20vw;
+    width: 15vw;
+    height: 15vw;
     background-color: #272624;
-    margin-bottom: 6vw;
     background-image: url('demo.jpeg'); 
     background-size: cover; 
-    /* background-position: center;  */
+    align-items: flex-end;
+    position: relative;
 }
 
 .textTwo {
-    width: 15vw;
+    width: 9vw;
     height: 40vw;
     background-color: #272624;
+    position: absolute;
+    top: 30vw;
 }
 
 .profileThree {
-    width: 25vw;
-    height: 25vw;
+    width: 20vw;
+    height: 20vw;
     background-color: #272624;
-    margin-bottom: 6vw;
     background-image: url('demo.jpeg'); 
     background-size: cover; 
-    /* background-position: center;  */
+    align-self: flex-end;
+    position: relative;
 }
 
 .textThree {
-    width: 20vw;
+    width: 12vw;
     height: 45vw;
     background-color: #272624;
+    position: absolute;
+    top: 30vw;
 }
 
 .profileFour {
-    width: 30vw;
-    height: 30vw;
+    width: 25vw;
+    height: 25vw;
     background-color: #272624;
-    margin-bottom: 6vw;
     background-image: url('demo.jpeg'); 
     background-size: cover; 
-    /* background-position: center;  */
+    align-self: flex-end;
+    position: relative;
 }
 
 .textFour {
-    width: 25vw;
+    width: 15vw;
     height: 50vw;
     background-color: #272624;
+    position: absolute;
+    top: 30vw;
 }
